k8s/prod/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: equity-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: equity-backend
  template:
    metadata:
      labels:
        app: equity-backend
    spec:
      containers:
        - name: backend
          image: 248729599698.dkr.ecr.us-west-1.amazonaws.com/equity-realestate-prod:backend-prod-48
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          volumeMounts:
            - name: env-volume
              mountPath: /var/www/html/api/.envs/.env.prod
              subPath: .env.prod
      volumes:
        - name: env-volume
          configMap:
            name: backend-env-file
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: equity-backend
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
